<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B6623"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/settings"
        android:textSize="32sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/server_addr_"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/server_port_"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editTextServerPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="20dp" />

        </TableRow>

    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <CheckBox
        android:id="@+id/checkBoxAllowLaunchGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0"
        android:text="@string/allow_launch_games"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/buttonResetDefaultValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="0"
        android:text="@string/reset_default_values" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

</LinearLayout>