<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B6623"
    android:orientation="vertical"
    tools:context=".GameManagementActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="64sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/partner_"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerPartner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="0"
        android:dropDownWidth="wrap_content"
        android:minWidth="200dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/left_opponent_"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="110dp"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerOpponentLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="110dp"
        android:layout_weight="0"
        android:dropDownWidth="wrap_content"
        android:minWidth="200dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/right_opponent_"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="10dp"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinnerOpponentRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0"
        android:dropDownWidth="wrap_content"
        android:minWidth="200dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/player_name_"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:text="TextView"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonLaunchGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/launch_game" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <ImageButton
            android:id="@+id/imageButtonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </LinearLayout>

</LinearLayout>