<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B6623"
    android:orientation="vertical"
    tools:context=".GameBoardActivity">

    <org.dominoo.GameBoardView
        android:id="@+id/viewGameBoard"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TableRow
                android:layout_width="0px"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewPair1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/pair_1" />

                <TextView
                    android:id="@+id/textViewPair2"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pair_2"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="0px"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewPlayer0Name"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Player 0" />

                <TextView
                    android:id="@+id/textViewPlayer1Name"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Player 1" />

            </TableRow>

            <TableRow
                android:layout_width="0px"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewPlayer2Name"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Player 2" />

                <TextView
                    android:id="@+id/textViewPlayer3Name"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Player 3" />

            </TableRow>

            <TableRow
                android:layout_width="0px"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewPair1Points"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0 points" />

                <TextView
                    android:id="@+id/textViewPair2Points"
                    android:layout_width="0px"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0 points" />

            </TableRow>

        </TableLayout>

        <org.dominoo.PlayerTilesView
            android:id="@+id/viewPlayerTiles"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="4" />

        <Button
            android:id="@+id/buttonPassTurn"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pass_turn" />


    </LinearLayout>



</LinearLayout>